# cartesian-impedance-control

./: README.md
double_lwr_robot/: .gitignore  CMakeLists.txt  package.xml
double_lwr_robot/config/: 49938-FRI-Driver.init  49939-FRI-Driver.init  double_controllers.yaml  double_hw_interface.yaml
double_lwr_robot/launch/: double_arms.launch
double_lwr_robot/robot/: double_lwr_robot.urdf.xacro  kuka_lwr_left_robot.urdf.xacro  kuka_lwr_right_robot.urdf.xacro
force-torque-sensor-master/: CMakeLists.txt  nota.txt
force-torque-sensor-master/launch/: FTsensor.launch  FTsensor_13855.launch  FTsensor_13953.launch  FTsensor_solo.launch
force-torque-sensor-master/src/: FTSensor.cpp  FT_sensor_node.cpp  ftsensor_listener.cpp  ftsensor_py.py
force-torque-sensor-master/test/: simple_reader.cpp
krl/: FRIControl.src
kuka_lwr_controllers/: CMakeLists.txt  CMakeLists.txt~  kuka_lwr_controllers_plugins.xml  package.xml
kuka_lwr_controllers/include/: basic_torque_controller.h  cartesian_computed_torque_controller.h  cartesian_computed_torque_controller.h~  cartesian_velocity_control.h  computed_torque_controller.h  gravity_compensation_controller.h  group_command_controller.h  group_command_controller_fri.h  group_command_torque_controller.h  harsh_admittance_controller.h~  harsh_admittance_controller_fri.h  harsh_admittance_controller_fri.h~  harsh_admittance_controller_ros.h  harsh_admittance_controller_ros.h~  harsh_cartesian_impedance_controller.h  harsh_trust_impedance_controller.h~  hybrid_position_force.h~  kinematic_chain_controller_base.h  one_task_inverse_kinematics.h  one_task_inverse_kinematics_fri.h  operational_space_controller.h  operational_space_controller_(original).h  simple_cartesian_impedance_controller.h  simple_cartesian_impedance_controller.h~  torque_based_position.h  torque_based_position_gazebo.h  torque_based_position_gazebo_backup.h
kuka_lwr_controllers/include/pid/: pid.h
kuka_lwr_controllers/msg/: PathPointCaracteristics.msg  PoseRPY.msg  StiffnessDamping.msg~  TrajPathPoint.msg
kuka_lwr_controllers/src/: admittance_node.cpp  admittance_node.cpp~  admittance_node_2.cpp  admittance_node_backup.cpp  admittance_node_fri.cpp  admittance_node_fri.cpp~  admittance_node_global_frame.cpp  basic_torque_controller.cpp  cartesian_computed_torque_controller.cpp  cartesian_computed_torque_controller.cpp~  cartesian_velocity_control.cpp  computed_torque_controller.cpp  gravity_compensation_controller.cpp  group_command_controller.cpp  group_command_controller_fri.cpp  group_command_torque_controller.cpp  harsh_admittance_controller.cpp  harsh_admittance_controller.cpp~  harsh_admittance_controller_fri.cpp  harsh_admittance_controller_ros.cpp  harsh_admittance_controller_ros.cpp~  harsh_cartesian_impedance_controller.cpp  harsh_trust_impedance_controller.cpp  harsh_trust_impedance_controller.cpp~  impedance_node.cpp  impedance_node.cpp~  node_test_irml.cpp  one_task_inverse_kinematics.cpp  one_task_inverse_kinematics_fri.cpp  operational_space_controller.cpp  operational_space_controller_(original).cpp  simple_cartesian_impedance_controller.cpp  torque_based_position.cpp  torque_based_position_gazebo.cpp  torque_based_position_gazebo_backup.cpp
kuka_lwr_controllers/src/filter/: force_filter.py
kuka_lwr_controllers/src/pid/: pid.cpp
kuka_lwr_controllers/srv/: GetJointVelocity.srv
kuka_lwr_description/: .gitignore  CMakeLists.txt  package.xml
kuka_lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr_materials.xacro  kuka_lwr_transmissions.xacro  kuka_lwr_urdf.xacro
kuka_lwr_gazebo/: CMakeLists.txt  package.xml
kuka_lwr_gazebo/launch/: double_arms.launch
kuka_lwr_gazebo/robot/: double_lwr_robot.urdf.xacro
kuka_lwr_gazebo_plugin/: CMakeLists.txt  package.xml
kuka_lwr_gazebo_plugin/src/: lwr_gazebo_plugin.cpp
kuka_lwr_hw/: .gitignore  CMakeLists.txt  package.xml
kuka_lwr_hw/include/kuka_lwr_hw/: lwr_hw.h  lwr_hw_fril.hpp  lwr_hw_gazebo.h  lwr_kuka_cartesian_interface.h
kuka_lwr_hw/src/: lwr_hw.cpp  lwr_hw_fril_node.cpp  lwr_hw_gazebo.cpp
kuka_lwr_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kuka_lwr_moveit/config/: controllers.yaml  double_lwr_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_lwr_left.srdf  kuka_lwr_right.srdf  ompl_planning.yaml
kuka_lwr_moveit/launch/: default_warehouse_db.launch  demo.launch  double_lwr_robot_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_kuka_lwr_left.rviz  moveit_kuka_lwr_right.rviz  moveit_rviz.launch  moveit_rviz_kuka_lwr_left.launch  moveit_rviz_kuka_lwr_right.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pan_tilt_com/: CMakeLists.txt  package.xml
pan_tilt_controllers/: CMakeLists.txt  package.xml  pan_tilt_controllers_plugins.xml
pan_tilt_controllers/include/: pan_tilt_position.h
pan_tilt_controllers/msg/: Pan_tilt.msg
pan_tilt_hw/: CMakeLists.txt  package.xml
pan_tilt_real/: CMakeLists.txt  package.xml
pantilt_description/: CMakeLists.txt  package.xml
pantilt_gazebo/: CMakeLists.txt  package.xml
platform_gazebo/: CMakeLists.txt  package.xml  send_specific_position.sh  start_specific_position.sh
platform_rviz/: CMakeLists.txt  package.xml
rqt_plugins/: CMakeLists.txt  package.xml  plugin.xml
rqt_plugins/include/rqt_plugins/: qtplotchecked.h  qtpositionsliders.h  qtvelocitysliders.h  rqt_platform_sigma_controller_manager.h  rqt_platform_sigma_joint_position.h
rqt_plugins/resources/: resources.qrc
rqt_plugins/src/: qtplotchecked.cpp  qtpositionsliders.cpp  qtvelocitysliders.cpp  rqt_platform_sigma_controller_manager.cpp  rqt_platform_sigma_joint_position.cpp
test_move_group/: CMakeLists.txt  package.xml
trunk_description/: CMakeLists.txt  package.xml
txt/: Readme.txt  Readme.txt~
wrist_sensor_interface/: CMakeLists.txt  package.xml  plugin.xml  setup.py
(+90 files in other folders)
